# yuumi

./: .gitignore  Cargo.toml  LICENSE.md  README.md  compile_shaders.bat
.github/workflows/: rust.yml
assets/models/: cube.gltf
assets/shaders/: compile.bat  shader.frag  shader.vert
examples/: client.rs
lib/: frag.spv  vert.spv
src/: app.rs  assets.rs  camera.rs  camera_controller.rs  command_buffer.rs  depth_object.rs  descriptor_layout.rs  descriptor_pool.rs  generate_mipmaps.rs  image_view.rs  input.rs  instance.rs  instance_buffer.rs  lib.rs  logical_device.rs  main.rs  mesh.rs  metrics.rs  model.rs  msaa.rs  physical_device.rs  pipeline.rs  render_pass.rs  serializer.rs  shader.rs  single_time_cmd.rs  swapchain.rs  sync_object.rs  texture.rs  texture_image.rs  texture_sampler.rs  types.rs  uniform_buffer.rs  vertex.rs  vertex_buffer.rs  vk_command_buffer.rs  vk_depth_object.rs  vk_descriptor_layout.rs  vk_descriptor_pool.rs  vk_framebuffer.rs  (+16 more)
