[package]
name = "titan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cgmath = "0.18.0"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.18.0"
png = "0.17"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.18.0", features = ["libloading", "window"] }
winit = "0.28.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3